k8s/whoami/whoami-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: whoami
  labels:
    component: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      component: whoami
  template:
    metadata:
      labels:
        component: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
