k8s/whoami/whoami-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/whoami`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/whoami/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    secretName: traefik-secret
